Fix css style extra space on mobile and desktop
Set width and height of desktop images to 0 while on mobile ratios.
Erase card-img width to fix the extra space on the desktop version

--- a/style.css
+++ b/style.css
@@ -150,7 +150,6 @@ ul {
 }
 
 .card-img {
-  width: 93%;
   align-self: center;
   margin-top: 4%;
 }
@@ -158,11 +157,16 @@ ul {
 .desktop-card-img {
   visibility: hidden;
   position: absolute;
+  width: 0;
+  height: 0;
+
 }
 
 .desktop-card-img-left {
   visibility: hidden;
   position: absolute;
+  width: 0;
+  height: 0;
 }
 
 h3 {
